# crewai-code-generator

./: .report.md  FindDuplicateStrings.java  JdbcExample.java  README.md  pyproject.toml  report.md  reverse_linked_list.py
src/tool_project/: crew.py  main.py
src/tool_project/config/: agents.yaml  tasks.yaml
src/tool_project/tools/: custom_tool.py
